[package]
name = "twitter-bot-rs"
version = "0.1.0"
authors = ["Julien Delange <julien@gunnm.org>"]
edition = "2021"

[dependencies]
dirs2 = "3.0.1"
egg-mode = "0.16.0"
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
oauth-client = "0.6.1"
