[package]
name = "rusted-parrot"
version = "0.1.0"
authors = ["Caleb Smith <email@calebdixonsmith.top>"]
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2021"

[dependencies]
dirs2 = "3.0.1"
rust_twitter_bot_lib = "0.1.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"